# poc_sketchbook

./: createSktBook.py  pyproject.toml
test/: README.md  main.py
test/sketches/: particles.py
tolvera/: pyproject.toml
tolvera/tolvera/: __main__.py
tolvera/tolvera/todo1/: README.md  main.py  pyproject.toml
